# Testing-opensource-OCR_model-HF-

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  requirements_new.txt
app/: __init__.py  schemas.py
app/core/: config.py  model_registry.py  ocr_tasks.py  task_store.py
app/models/: base.py  paddleocr_v5.py  paddleocr_vl.py  qari_ocr_vl_2b.py  qwen_ocr.py
app/ocr_postprocess/: __init__.py  correction.py  grouping.py  merging.py  normalization.py  pipeline.py  sorting.py  utils.py
app/ocr_postprocess/dictionary/: arabic_words.txt
app/routers/: benchmark.py  health.py  ocr.py
