[project]
name = "ocr-pipeline"
version = "0.1.0"
description = "qwen based OCR API"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi",
    "httpx",
    "pillow",
    "pymupdf",
    "uvicorn",
    "python-multipart",
    "pydantic-settings",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
